Fixed settings input fields being stuck to a fixed width - now scales to fit available space up to a reasonable max width

--- a/src/media/css/friends.styl
+++ b/src/media/css/friends.styl
@@ -30,10 +30,16 @@ $settings_avatar_size = 80px;
     }
     .edit-profile {
         display: inline-block;
+        width: 80%;  // can't use 100% width or it'll be displayed below avatar-container
         table {
             border-collapse: separate; 
             border-spacing: 10px;
             margin-bottom: 20px;
+            width: 100%;
+            td.label-col {
+                white-space: nowrap;
+                width: 1px;
+            }
             label {
                 font-size: 18px;
                 line-height: 22px;
@@ -42,7 +48,8 @@ $settings_avatar_size = 80px;
             }
             input {
                 line-height: normal;  // needed to align placeholder correctly
-                max-width: 300px;
+                max-width: 350px;
+                width: 100%;
             }
         }
     }
